--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: EmberDumps
 ---
 
-<div class='container'>
+<div id='container'>
   <h1>Ember Dumps</h1>
 
   <ul class="ember-dumps">
