Add Alex's talks

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Ember Dumps
         </p>
         {% endif %}
 
-        {% if dump.duration %}
+        {% if dump.date %}
           <p class='date'>
           Date: {{ dump.date | date_to_string}}
           </p>
